--- a/index.html
+++ b/index.html
@@ -704,71 +704,14 @@ header #menu{
 
 <section class="course" id="course">
 
-<h1 class="heading">courses we offer</h1>    
-
-<div class="box-container">
-
-    <div class="box">
-        <img src="https://edusaksham.com/eduadmin/public/uploads/subclasss/1571205874.png" alt="">
-        <div class="content">
-            <a href="#" class="title">Class 6</a>
-            <p>NCERT CLASS 6</p>
-            <div class="info">
-                <h3> <i class="far fa-clock"></i>EVERY SUNDAY 1 hour 2:00 pm to 3:00pm</h3>
-                <h3> <i class="fas fa-book"></i>NCERT</h3>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="box">
-        <img src="https://edusaksham.com//eduadmin/public/uploads/classs/1571659516.png" alt="">
-        <div class="content">
-            <a href="#" class="title">Class 7</a>
-            <p>NCERT CLASS 7</p>
-            <div class="info">
-                <h3> <i class="far fa-clock"></i>EVERY SUNDAY 1 hour 3:00 pm to 4:00pm<</h3>
-                <h3> <i class="fas fa-book"></i> NCERT </h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="box">
-        <img src="https://edusaksham.com//eduadmin/public/uploads/classs/1571659704.png" alt="">
-        <div class="content">
-            <a href="#" class="title">Class 8</a>
-            <p>NCERT CLASS 8</p>
-            <div class="info">
-                <h3> <i class="far fa-clock"></i> EVERY SUNDAY 1 hour 4:00pm to 5:00pm</h3>
-                <h3> <i class="fas fa-book"></i> NCERT </h3>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="box">
-        <img src="https://edusaksham.com//eduadmin/public/uploads/classs/1571659996.png" alt="">
-        <div class="content">
-
-            <a href="#" class="title">Class 9</a>
-            <p>NCERT CLASS 9</p>
-            <div class="info">
-                <h3> <i class="far fa-clock"></i> EVERY SUNDAY 1 hour 4:00pm to 5:00pm </h3>
-                <h3> <i class="fas fa-book"></i> NCERT </h3>
-            </div>
-        </div>
-    </div>
 <div class="home">
     <div class="box-container">
             <h1 class="heading">how to join?</h1>  
     </div>
-    <p>It is very simple select your class and join the class room below and meeting link would be sent on the sheduled time in the classroom</p>
+    <p>It is very simple select your class and join the class room below and meeting link would be sent on the sheduled time in the classroom (EVERY SUNDAY 3PM-4PM)</p>
 </div>
 <div class="box-container">
-        <a class="btn" href="https://classroom.google.com/c/NTA3MTM0Mjc1MjU2?cjc=7s4lv3x">Join class 6 class room</a>
-        <a class="btn" href="https://classroom.google.com/c/NTA3MTM1ODYwNTY5?cjc=mgqgm3k">Join class 7 class room</a>
-        <a class="btn" href="https://classroom.google.com/c/NTA3MTM1ODYwODM2?cjc=bjaeaj6">Join class 8 class room</a>
-        <a class="btn" href="https://classroom.google.com/c/NTA3MTM1ODYwOTcy?cjc=wfkgsje">Join class 9 class room</a>
+        <a class="btn" href="https://classroom.google.com/c/NDg1NTU0NTMzMjM4?cjc=f7aph4p">Join Now in Self learners</a>
         </div>
 </div>
 
@@ -792,7 +735,7 @@ header #menu{
     
 <div class="home">
     <a class="btn" href="https://forms.gle/1KMGNLuUpW85kGZQA">CONTACT US</a>
-    <p style="color: white;">Or contact us through<a href="mailto:selflearners50@gmail.com"> selflearners50@gmail.com</a></p>
+    <p class="heading" style="color: white;">Or contact us through<a href="mailto:selflearners50@gmail.com"> selflearners50@gmail.com</a></p>
 </div>
 
 
