--- a/index.html
+++ b/index.html
@@ -708,10 +708,22 @@ header #menu{
     <div class="box-container">
             <h1 class="heading">how to join?</h1>  
     </div>
-    <p>It is very simple select your class and join the class room below and meeting link would be sent on the sheduled time in the classroom (EVERY SUNDAY 3PM-4PM)</p>
+    <p>It is very simple join the class room below and meeting link would be sent on the sheduled time in the classroom (EVERY SUNDAY 3PM-4PM)</p>
 </div>
 <div class="box-container">
         <a class="btn" href="https://classroom.google.com/c/NDg1NTU0NTMzMjM4?cjc=f7aph4p">Join Now in Self learners</a>
+        </div>
+</div>
+
+</section>
+
+<section class="course" id="course">
+
+<div class="home">
+    <div class="box-container">
+            <h1 class="heading">Want recorded lessons?Click on the button below</h1> 
+<div class="box-container">
+        <a class="btn" href="https://gokul2009.github.io/Vedu/">Vedu NCERT</a>
         </div>
 </div>
 
