--- a/index.html
+++ b/index.html
@@ -729,6 +729,33 @@ header #menu{
         </div>
 </section>
 
+<section class="home">
+    <div class="box-container">
+            <h1 class="heading">NCERT BOOKS</h1>  
+    </div>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-12/">NCERT Books for Class 12</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-11/">NCERT Books for Class 11</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-10/">NCERT Books for Class 10</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-9/">NCERT Books for Class 9</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-8/">NCERT Books for Class 8</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-7/">NCERT Books for Class 7</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-6/">NCERT Books for Class 6</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-5/">NCERT Books for Class 5</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-4/">NCERT Books for Class 4</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-3/">NCERT Books for Class 3</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-2/">NCERT Books for Class 2</a>
+<a class="btn" href="https://ncertguru.org/ncert-books/class-1/">NCERT Books for Class 1</a>
+<div class="box-container">
+            <h2 class="heading">COMPETITIVE EXAMINATION BOOKS</h2>  
+    </div>
+    <a class="btn" href="https://books26.myinstamojo.com/">Competitive examination books</a>
+    <div class="box-container">
+            <h2 class="heading">QUIZZES FOR EVERY CLASSES</h2>  
+    </div>
+    <a class="btn" href="https://quizizz.com/join">QUIZZES HERE</a>
+</section>
+
+https://quizizz.com/join
 
 <section class="contact" id="contact">
 
