--- a/index.html
+++ b/index.html
@@ -745,14 +745,15 @@ header #menu{
 <a class="btn" href="https://ncertguru.org/ncert-books/class-3/">NCERT Books for Class 3</a>
 <a class="btn" href="https://ncertguru.org/ncert-books/class-2/">NCERT Books for Class 2</a>
 <a class="btn" href="https://ncertguru.org/ncert-books/class-1/">NCERT Books for Class 1</a>
-<div class="box-container">
-            <h2 class="heading">COMPETITIVE EXAMINATION BOOKS</h2>  
-    </div>
-    <a class="btn" href="https://books26.myinstamojo.com/">Competitive examination books</a>
+
+
+    
+
     <div class="box-container">
-            <h2 class="heading">QUIZZES FOR EVERY CLASSES</h2>  
+            <h2 class="heading">WANT E-BOOKS??</h2>  
     </div>
-    <a class="btn" href="https://quizizz.com/join">QUIZZES HERE</a>
+    <a class="btn" href="https://1lib.in/">e-book library</a>
+
 </section>
 
 <section class="contact" id="contact">
