--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ section{
         <h3>Recorded Lessons</h3>
         <img class="img" src="https://kahoot.com/files/2020/03/DistanceLearning-EasierAccess.png">
         <p>Want recorded lessons for NCERT which will help you in exams? click below</p>
-        <a class="btn" href="https://gokul2009.github.io/Vedu/">Self-learners NCERT</a>
+        <a class="btn" href="https://gokul2009.github.io/Self-Learners-learning-app/">Self-learners-learning app NCERT</a>
     </div>
 
 </section>
@@ -711,6 +711,22 @@ section{
     <a class="btn" href="https://quizizz.com/join/search/class%208%20and%209?languages=English">class 8 and 9</a>
     <a class="btn" href="https://quizizz.com/join/search/class%2010%20and%2011?languages=English">class 10 and 11</a>
     <a class="btn" href="https://quizizz.com/join/search/class%2012%20?languages=English">class 12</a>
+    </div>
+
+</section>
+<section class="home" id="home">
+
+    <div class="content">
+        <h3 class="heading">SELF LEARNING TIPS</h3>  
+        <img class="img" src="https://cdn.dribbble.com/users/2704414/screenshots/7466903/selfportrait.gif">
+            <h2><li>Study Different Subjects.</li></h2>
+            <h2><li>Today, information is available everywhere.</li></h2>
+            <h2><li>Make Notes Every Day.</li></h2>
+            <h2><li>Test Yourself Regularly.</li></h2>
+            <h2><li>Watch Video Tutorials.</li></h2>
+            <h2><li>Study with Educational Games.</li></h2>
+            <h2><li>Read Out Loud.Reading out any text loud is the best way to remember that text</li></h2>
+            <h2><li>Take Short Breaks Regularly </li></h2>
     </div>
 
 </section>
@@ -746,6 +762,7 @@ Kurzgesagt – In a Nutshell </a>
         <a href="https://www.instagram.com/selflearners1/" class="fab fa-instagram"></a>
         <a href="https://www.linkedin.com/in/selflearners-undefined-60aa8a239/" class="fab fa-linkedin"></a>
     </div>
+    <h1>Powerd by Apps-Lore</h1>
 
 </section>
 
