--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ section{
 
 <header  style="align-content: center;" class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-user-graduate"></i></i> Self-Learners </a>
+    <a href="https://gokul2009.github.io/Self-learners/" class="logo"> <i class="fas fa-user-graduate"></i></i> Self-Learners </a>
 
 </header>
 
