--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ section{
 
     <div class="content">
         <h3>Discover a new way of learning</h3>
-        <p>Welcome to Self Learners. We are a passionate to excel in wisdom and knowledge, we are group of good students who have zeal to achieve our Life's goals.</p>
+        <p>Welcome to Self Learners. We are passionate to excel in wisdom and knowledge, we are group of good students who have zeal to achieve our Life's goals.</p>
         <p>Instead of having a concept explained to you, you can use instructions, context clues, and examples to figure out the answer on your own. When you develop the ability to self-learn, you can study any subject confidently.</p>
     </div>
 
