--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ section{
 
     <div class="content">
         <h3>Discover a new way of learning</h3>
-        <p>Welcome to Self Learners. We are passionate to excel in wisdom and knowledge, we are group of good students who have zeal to achieve our Life's goals.</p>
+        <p>Welcome to Self Learners. We are a passionate to excel in wisdom and knowledge, we are group of good students who have zeal to achieve our Life's goals.</p>
         <p>Instead of having a concept explained to you, you can use instructions, context clues, and examples to figure out the answer on your own. When you develop the ability to self-learn, you can study any subject confidently.</p>
     </div>
 
@@ -707,6 +707,8 @@ section{
         <img class="img" src="https://images.g2crowd.com/uploads/product/image/social_landscape/social_landscape_cc23c306f0259fa0a699453822c23fae/quizizz.png">
         <p>Want a website for quizzes (website name:quizizz)? click below</p>
         <p>This website provides quizzes for spefic grades</p>
+        <a class="btn" href="https://quizizz.com/join/search/class%202%20and%203?languages=English">class 2 and 3</a>
+        <a class="btn" href="https://quizizz.com/join/search/class%204%20and%205?languages=English">class 4 and 5</a>
         <a class="btn" href="https://quizizz.com/join/search/class%206%20and%207?languages=English">class 6 and 7</a>
     <a class="btn" href="https://quizizz.com/join/search/class%208%20and%209?languages=English">class 8 and 9</a>
     <a class="btn" href="https://quizizz.com/join/search/class%2010%20and%2011?languages=English">class 10 and 11</a>
