--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/6e9ffed5f4.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
         let menu = document.querySelector('#menu-btn');
 let navbar = document.querySelector('.navbar');
@@ -694,11 +695,22 @@ section{
         <h3>Recorded Lessons</h3>
         <img class="img" src="https://kahoot.com/files/2020/03/DistanceLearning-EasierAccess.png">
         <p>Want recorded lessons for NCERT which will help you in exams? click below</p>
-        <a class="btn" href="https://gokul2009.github.io/Self-Learners-learning-app/">Self-learners-learning app NCERT</a>
+        <a class="btn" href="https://gokul2009.github.io/Self-Learners-learning-app/">Self-learners video lessons</a>
     </div>
 
 </section>
 </section>
+
+<section class="home" id="home">
+
+    <div class="content">
+        <h3>SELF-LEARNERS LIBRARY</h3>
+        <img class="img" src="https://cdn.dribbble.com/users/879059/screenshots/4040049/ksam_library_by_joakim_agervald.gif">
+        <a class="btn" href="https://gokul2009.github.io/Self-learners-library/">Self-learners Library <i class="fas fa-book"></i> </a>
+    </div>
+
+</section>
+
 <img class="img" src="https://pmgbiology.files.wordpress.com/2015/05/testyourself-logo.png">
 <section class="home" id="home">
 
@@ -752,7 +764,6 @@ Kurzgesagt – In a Nutshell </a>
     </div>
 
 </section>
-
 
 <section class="footer">
 
