--- a/index.html
+++ b/index.html
@@ -797,6 +797,8 @@ Kurzgesagt – In a Nutshell </a>
 
 <!-- custom javascript file link  -->
 <script src="js/script.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1677556280084255"
+     crossorigin="anonymous"></script>
 
 </body>
 </html>
